pkg/reconciler/kubernetes/tektonhub/testdata/ingress.yaml
# Copyright © 2021 The Tekton Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-hub-api
  namespace: tekton-pipelines
  labels:
    app: api
  annotations:
    kubernetes.io/ingress.class: ingress-class
spec:
  rules:
    - host: test-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-hub-api
                port:
                  number: 8000
